fixed nav on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ nav a {
 	padding: 5px;
 }
 nav ul {
+	padding: 0px;
 	display: flex;
 	margin: 5px;
 	width: 15%;
@@ -62,6 +63,11 @@ nav li {
 .members {
 	width: fit-content;
 	margin: auto;
+	color: white;
+}
+.name{
+	-webkit-text-stroke-width: 1.5px;
+	-webkit-text-stroke-color: black;
 }
 .avatar {
 	margin: auto;
